--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Systemic module to integrate Prometheus metrics",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,11 @@
   "devDependencies": {
     "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^28.1.1"
+  },
+  "dependencies": {
+    "debug": "^4.3.4",
+    "prom-client": "^14.0.1"
   }
 }
